--- a/index.html
+++ b/index.html
@@ -7,20 +7,29 @@
     <link rel="stylesheet" href="index.css">
     <script defer src="index.js"></script>
     <title>Rock Paper Scissor</title>
-    <style>
-        body {
-            background-color: black;
-        }
-        h1 {
-            font-size: 200%;
-            font-family: Tahoma;
-            text-align: center;
-            color: aliceblue;
-            padding: 20px;
-        }
-    </style>
 </head>
 <body>
+    <div id="sub-bg">
+
+    </div>
     <h1 id="headline">Rock Paper Scissor</h1>
+    <form>
+        <fieldset>
+            <legend>Select your option:</legend>
+            <div>
+                <input type="radio" id="Rock" name="option" value="Rock">
+                <label for="Rock" class="light">Rock</label>
+            </div>
+            <div>
+                <input type="radio" id="Paper" name="option" value="Paper">
+                <label for="Paper" class="light">Paper</label>
+            </div>
+            <div>
+                <input type="radio" id="Scissor" name="option" value="Scissor">
+                <label for="Scissor" class="light">Scissor</label>
+            </div>
+        </fieldset>
+        <button type="submit" class="confirm">Confirm</button>
+    </form>
 </body>
 </html>
