positioned input and output box next to each other & displayed output using javascript

--- a/index.html
+++ b/index.html
@@ -9,29 +9,32 @@
     <title>Rock Paper Scissor</title>
 </head>
 <body>
-    <h1 id="headline">Rock Paper Scissor</h1>
     <div class="container">
-        <div class="vertical"></div>
-        <form>
-            <div class="background">
-                <fieldset>
-                    <legend>Select your option</legend>
-                    <div>
-                        <input type="radio" id="Rock" name="option" value="Rock">
-                        <label for="Rock" class="light">Rock</label>
-                    </div>
-                    <div>
-                        <input type="radio" id="Paper" name="option" value="Paper">
-                        <label for="Paper" class="light">Paper</label>
-                    </div>
-                    <div>
-                        <input type="radio" id="Scissor" name="option" value="Scissor">
-                        <label for="Scissor" class="light">Scissor</label>
-                    </div>
-                </fieldset>
-                <button type="submit" class="confirm">Confirm</button>
+        <h1 id="headline">Rock Paper Scissor</h1>
+        <div class="game">
+            <div class="game-input">
+                <form id="game-form">
+                    <fieldset class="game-input-fieldset">
+                        <legend class="game-input-legend">Select your option</legend>
+                        <div>
+                            <input checked type="radio" id="Rock" name="option" value="Rock">
+                            <label for="Rock" class="light">Rock</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="Paper" name="option" value="Paper">
+                            <label for="Paper" class="light">Paper</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="Scissor" name="option" value="Scissor">
+                            <label for="Scissor" class="light">Scissor</label>
+                        </div>
+                    </fieldset>
+                    <button type="submit" class="confirm">Confirm</button>
+                </form>
             </div>
-        </form>
+            <div class="game-output">
+            </div>
+        </div>
     </div>
 </body>
 </html>
